RM-1450 fixed vertical alignment of control parts; fixed other style issues introduced by RM-1438 DIV to SPAN patch
git-svn-id: https://svn.re-motion.org/svn/Remotion/trunk@13993 cb0deee2-328e-b949-94ea-fb3139fab790

--- a/Remotion/ObjectBinding/Web/Res/HTML/Standard/BocAutoCompleteReferenceValue.css
+++ b/Remotion/ObjectBinding/Web/Res/HTML/Standard/BocAutoCompleteReferenceValue.css
@@ -1,4 +1,4 @@
-﻿.bocAutoCompleteReferenceValue
+﻿span.bocAutoCompleteReferenceValue
 {
     position: relative;
     height: auto;
@@ -6,14 +6,14 @@
     display: inline-block;
 }
 
-.bocAutoCompleteReferenceValueContent
+span.bocAutoCompleteReferenceValueContent
 {
-  display: inline-block;
+  display: block;
   position: relative;
   text-align: left;
   line-height: 1.25em;
   white-space: nowrap;
-  padding: 2px 0px;
+  padding: 1px 0px;
 }
 
 .bocAutoCompleteReferenceValue span.content
@@ -28,7 +28,6 @@
   display: inline-block;
   position: relative;
   padding: 1px;
-  top: -2px;
   margin: 0;
 }
 
